package dev.kaldiroglu.dp.structural.bridge.basic.pattern;

/** A ConcreteImplementor. */
public class AConcreteImplementation2 implements AnAbstractionImplementation {

    @Override
    public void doingIt() {
        System.out.println("  AConcreteImplementation2: I am doing it!");
    }
}
