package dev.kaldiroglu.dp.structural.bridge.basic.pattern;

/**
 * The Implementor.
 * <p>
 * Note the name: the earlier spelling of this interface was {@code AnAbstrationImplementation},
 * which is the sort of thing that survives for years because nothing ever reads it aloud.
 */
public interface AnAbstractionImplementation {

    void doingIt();
}
